@@ -104,3 +104,8 @@ testno 13
 battlestar/battlestar <tests/battlestar.in13 >test.out 2>&1 || failtest
 compare test.out tests/battlestar.out13
 rm -f test.out
+
+testno 14
+battlestar/battlestar <tests/battlestar.in14 >test.out 2>&1 || failtest
+compare test.out tests/battlestar.out14
+rm -f test.out
